--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -45,7 +45,7 @@
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <a asp-action="EditProduct" asp-route-id="@items.Id" type="button" class="btn btn-warning">Edit</a>
                                     <a asp-action="ProductDetails" asp-route-id="@items.Id" type="button" class="btn btn-info">Details</a>
-                                    <a asp-action="ProductManage" asp-route-id="@items.Id" type="button" class="btn btn-info">Manage</a>
+                                    <a asp-action="ProductManage" asp-route-id="@items.Id" type="button" class="btn btn-dark">Manage</a>
                                     <a asp-action="ProductQrCode" asp-route-id="@items.Id" type="button" class="btn btn-info">Genarete QR</a>
 
                                 </div>
