--- a/Areas/Management/Views/Work/PaymentNotClearWorkIndex.cshtml
+++ b/Areas/Management/Views/Work/PaymentNotClearWorkIndex.cshtml
@@ -40,8 +40,8 @@
                             <td>@items.Quantity</td>
                             <td class="float-right">
                                 <div class="btn-group" role="group" aria-label="Basic example">
-                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-warning">Details</a>
-                                    <a asp-action="PaymentManage" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Payment</a>
+                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Details</a>
+                                    <a asp-action="PaymentManage" asp-route-id="@items.WorkId" type="button" class="btn btn-dark">Payment</a>
                                 </div>
 
 
