--- a/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
+++ b/Areas/Management/Views/Work/CompleteWorkIndex.cshtml
@@ -40,7 +40,7 @@
                             <td>@items.Quantity</td>
                             <td class="float-right">
                                 <div class="btn-group" role="group" aria-label="Basic example">
-                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-warning">Details</a>
+                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Details</a>
                                 </div>
 
 
