--- a/Areas/Management/Views/Work/WorkIndex.cshtml
+++ b/Areas/Management/Views/Work/WorkIndex.cshtml
@@ -52,9 +52,9 @@
                             <td>@items.Quantity</td>
                             <td class="float-right">
                                 <div class="btn-group" role="group" aria-label="Basic example">
-                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-warning">Details</a>
-                                    <a asp-action="WorkManage" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Manage</a>
-
+                                    <a asp-action="WorkDetails" asp-route-id="@items.WorkId" type="button" class="btn btn-info">Details</a>
+                                    <a asp-action="WorkManage" asp-route-id="@items.WorkId" type="button" class="btn btn-dark">Manage</a>
+                                    
                                 </div>
                             </td>
                         </tr>
