Sales View Page

--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -272,10 +272,18 @@
                                         </p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a asp-area="Management" asp-controller="Sales" asp-action="SalesIndex" class="nav-link">
+                                        <i class="fas fa-angle-double-right"></i>
+                                        <p>
+                                            Sales
+                                        </p>
+                                    </a>
+                                </li>
 
-          
 
-                                
+
+
 
                                 @*<li class="nav-item">
 
