--- a/Areas/Management/Views/Sales/SalesIndex.cshtml
+++ b/Areas/Management/Views/Sales/SalesIndex.cshtml
@@ -4,9 +4,12 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1page_design</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link href="~/css/Style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -17,6 +20,9 @@
             font-size: 300%;
         }
     </style>
+
+
+
 
 
     <div class="mt-3">
@@ -49,12 +55,9 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale
-                                    </button>
-                                </td>
+                                        Sale</button></td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -67,12 +70,9 @@
 
                             </tr>
                             <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale
-                                    </button>
-                                </td>
+                                        Sale</button></td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -85,12 +85,9 @@
 
                             </tr>
                             <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale
-                                    </button>
-                                </td>
+                                        Sale</button></td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -179,32 +176,32 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <button class="button1" disabled>Consigner Credit</button>
+                        <button class="button1" >Consigner Credit</button>
                     </div>
                     <div class="col-md-4">
-                        <button class="button1" disabled>Reward Credit</button>
+                        <button class="button1" >Reward Credit</button>
                     </div>
                     <div class="col-md-4">
-                        <button class="button1 bhg" disabled>Store Credit</button>
+                        <button class="button1 bhg" >Store Credit</button>
                     </div>
 
                 </div>
                 <hr class="hrc">
                 <div class="row">
                     <div class="col-md-4">
-                        <button class="button2" disabled>Clear</button>
+                        <button class="button2" >Clear</button>
                     </div>
                     <div class="col-md-4">
-                        <button class="button2" disabled>Suspend</button>
+                        <button class="button2" >Suspend</button>
                     </div>
                     <div class="col-md-4">
-                        <button class="button2" disabled>Layaway</button>
+                        <button class="button2" >Layaway</button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="d-flex justify-content-md-center">
-                            <button class="btn3" disabled>Finish</button>
+                            <button class="btn3" >Finish</button>
                         </div>
 
                     </div>
@@ -215,6 +212,14 @@
 
 
     </div>
+
+
+
+
+
+
+
+    <script src="script.js"></script>
 
 </body>
 
