--- a/Areas/Management/Views/Sales/SalesIndex.cshtml
+++ b/Areas/Management/Views/Sales/SalesIndex.cshtml
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1page_design</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
@@ -55,9 +55,12 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>
+                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale</button></td>
+                                        Sale
+                                    </button>
+                                </td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -70,9 +73,12 @@
 
                             </tr>
                             <tr>
-                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>
+                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale</button></td>
+                                        Sale
+                                    </button>
+                                </td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -85,9 +91,12 @@
 
                             </tr>
                             <tr>
-                                <td>Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
+                                <td>
+                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
                                         Store
-                                        Sale</button></td>
+                                        Sale
+                                    </button>
+                                </td>
                                 <td>- <button class="mr-2 ml-2">1</button>+</td>
                                 <td> 14</td>
                                 <td> 77</td>
@@ -138,11 +147,11 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="row">
+                <div class="row bg-info border rounded">
                     <div class="col-md-12">
-                        <div style="height: 130px;" class="kicuna d-flex justify-content-md-center">
+                        <div style="height: 130px;" class=" d-flex justify-content-md-center align-items-center">
                             <div class="ml-2 p-4">
-                                <h1 class="Taka">$ 386</h1>
+                                <h1 class="">$ 386</h1>
                             </div>
                         </div>
                     </div>
@@ -168,42 +177,53 @@
                     </div>
                 </div>
                 <div style="margin-top: 100px;"></div>
-                <div class="row">
-                    <button class="button">Cash</button>
-                    <button class="button">Check</button>
-                    <button class="button">Credit Card</button>
-                    <button class="button">Gift Card</button>
+
+                <div style="height: 10%;" class="row my-3 d-flex justify-content-between">
+                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-info">Cash</button>
+                    </div>
+                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center ">
+                        <button class="w-100 border rounded btn btn-info">Check</button>
+                    </div>
+                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-info">Credit Card</button>
+                    </div>
+                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-info">Gift Card</button>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <button class="button1" >Consigner Credit</button>
+                <div style="height: 10%;" class="row my-3">
+
+                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-secondary">Consigner Credit</button>
                     </div>
-                    <div class="col-md-4">
-                        <button class="button1" >Reward Credit</button>
+                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-secondary">Reward Credit</button>
                     </div>
-                    <div class="col-md-4">
-                        <button class="button1 bhg" >Store Credit</button>
+                    <div style="padding: 0;" class="col-md-4 col-sm-12 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-secondary">Store Credit</button>
+                    </div>
+                </div>
+                <hr>
+                <div style="height: 10%;" class="row">
+
+                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center ">
+                        <button class="w-100 border rounded btn btn-dark">Clear</button>
+                    </div>
+                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-dark">Suspend</button>
+                    </div>
+                    <div style="padding: 0;" class="col-md-4 col-sm-12 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-dark">Layaway</button>
                     </div>
 
-                </div>
-                <hr class="hrc">
-                <div class="row">
-                    <div class="col-md-4">
-                        <button class="button2" >Clear</button>
-                    </div>
-                    <div class="col-md-4">
-                        <button class="button2" >Suspend</button>
-                    </div>
-                    <div class="col-md-4">
-                        <button class="button2" >Layaway</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="d-flex justify-content-md-center">
-                            <button class="btn3" >Finish</button>
-                        </div>
 
+
+
+                </div>
+                <div style="height: 10%;" class="row mt-5">
+                    <div style="padding:0;" class="col-md-12 d-flex justify-content-center">
+                        <button class="w-100 border rounded btn btn-success">Finish</button>
                     </div>
                 </div>
             </div>
