--- a/Areas/Management/Views/Home/CreateSubMenu.cshtml
+++ b/Areas/Management/Views/Home/CreateSubMenu.cshtml
@@ -30,7 +30,7 @@
                     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Action" asp-for="Action">
                 </div>
                 <div class="form-group">
-                    <label asp-for="MenuID" class="control-label">Inventory item</label>
+                    <label asp-for="MenuID" class="control-label">Main Menu</label>
                     <div class=" input-group">
                         <select class="form-control select2" data-native-menu="false" id="inventory" asp-for="MainMenuID" asp-items="@(new SelectList(ViewBag.menus, "MenuID","ManuName"))">
                             <option disabled selected="selected">Select One</option>
