--- a/Areas/Management/Views/Home/RolePermission.cshtml
+++ b/Areas/Management/Views/Home/RolePermission.cshtml
@@ -34,16 +34,16 @@
                     </div>
                     <span asp-validation-for="UserID" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label asp-for="UserTypeID" class="control-label">User Type</label>
                     <div class=" input-group">
                         <select class="form-control select2" data-native-menu="false" id="inventory" asp-for="UserTypeID" asp-items="@(new SelectList(ViewBag.usertype, "UserTypeID","UserTypeName"))">
                             <option disabled selected="selected">Select One</option>
-                        </select>
+                        </select>-->
                         @**@
-                    </div>
+                    <!--</div>
                     <span asp-validation-for="UserTypeID" class="text-danger"></span>
-                </div>
+                </div>-->
 
             </div>
             <!-- /.card-body -->
