--- a/Areas/Management/Views/Inventory/InventoryIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryIndex.cshtml
@@ -114,3 +114,4 @@
     }
 </body>
 </html>
+<a class="btn btn-primary" asp-area="Management" asp-controller="Home" asp-action="Index">Return Home Screen</a>
