--- a/Areas/Management/Views/PreModule/PreSelect.cshtml
+++ b/Areas/Management/Views/PreModule/PreSelect.cshtml
@@ -53,5 +53,5 @@
 <br />
 <br />
 
-<a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="Index">Return Home Screen</a>
+<a class="btn btn-primary" asp-area="Management" asp-controller="Home" asp-action="Index">Return Home Screen</a>
 
