--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -17,7 +17,9 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Exitst Product</h3>
+            <h3 class="card-title">Exitst Product</h3> <br />
+            <button id="showbtn" class="btn btn-primary">Show Product List</button>
+            <button id="hidebtn" class="btn btn-success">Hide Product List</button>
         </div>
         <a asp-action="Productcreate" class=" btn btn-primary float-right">Create New</a>
         @*<a asp-action="ProductQrCode" class=" btn btn-primary float-right">QRCode</a>*@
@@ -48,8 +50,7 @@
                                     <a asp-action="ProductManage" asp-route-id="@items.Id" type="button" class="btn btn-dark">Manage</a>
                                     <a asp-action="ProductQrCode" asp-route-id="@items.Id" type="button" class="btn btn-info">Genarete QR</a>
 
-                                </div>
-
+                                </div>                                                                                                                                                                                                                                                                                                                       
 
                             </td>
                         </tr>
@@ -81,6 +82,19 @@
             </div>
         }
     </div>
+
+    @section Scripts{ 
+    <script>
+        $(document).ready(function () {
+            $('#showbtn').click(function () {
+                $('#example1').show();
+            });
+            $('#hidebtn').click(function () {
+                $('#example1').hide();
+            });
+        });
+    </script>
+    }
 </body>
 </html>
 
