--- a/Areas/Management/Views/QRCodes/GenerateQRCode.cshtml
+++ b/Areas/Management/Views/QRCodes/GenerateQRCode.cshtml
@@ -10,7 +10,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Product</label>@*asp-for="BankName"*@
-                <select class="form-control" id="inv" asp-items="@(new SelectList(ViewBag.product, "Id","ProductTittle","ProductCode"))" name="id">
+                <select class="form-control" id="inv" asp-items="@ViewBag.pr" name="id">
                     <option selected>Select One </option>
                 </select>
                 <span class="text-danger"></span>@*asp-validation-for="BankName"*@
