--- a/Areas/Management/Views/Sales/SalesIndex.cshtml
+++ b/Areas/Management/Views/Sales/SalesIndex.cshtml
@@ -1,247 +1,118 @@
-﻿
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1page_design</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-
-<body>
-    <style>
-        .right {
-            color: blue;
-            font-family: verdana;
-            font-size: 300%;
-        }
-    </style>
-
-
-
-
-
-    <div class="mt-3">
-        <div class="row ml-2">
-            <div class="col-md-8">
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <div class="form-outline">
-                            <input type="search" id="form1" class="form-control" placeholder="Search Items" />
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-warning" type="button">Manual Sale</button>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-warning" type="button">Return Item</button>
-                    </div>
-                </div>
-                <div class="mb-5">
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Item Name</th>
-                                <th scope="col">Qty</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Discount</th>
-                                <th scope="col">Tax</th>
-                                <th scope="col">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
-                                        Store
-                                        Sale
-                                    </button>
-                                </td>
-                                <td>- <button class="mr-2 ml-2">1</button>+</td>
-                                <td> 14</td>
-                                <td> 77</td>
-                                <td>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                    </div>
-                                </td>
-                                <td>250</td>
-
-                            </tr>
-                            <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
-                                        Store
-                                        Sale
-                                    </button>
-                                </td>
-                                <td>- <button class="mr-2 ml-2">1</button>+</td>
-                                <td> 14</td>
-                                <td> 77</td>
-                                <td>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                    </div>
-                                </td>
-                                <td>250</td>
-
-                            </tr>
-                            <tr>
-                                <td>
-                                    Womens Alpaca Sweater Cray <br /> Discount 5.00% <button class="btn btn-warning">
-                                        Store
-                                        Sale
-                                    </button>
-                                </td>
-                                <td>- <button class="mr-2 ml-2">1</button>+</td>
-                                <td> 14</td>
-                                <td> 77</td>
-                                <td>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                    </div>
-                                </td>
-                                <td>250</td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-
-
-                <div style="height: 200px;" class="bg-secondary d-flex flex-column">
-                    <div class="ml-2">
-                        <p class="pt-2">Transction History + </p>
-                        <p class="p-2">Subtotal</p>
-                        <p class="p-2">Tax</p>
-                        <p class="font-weight-bold ">Total</p>
-
-                    </div>
-                </div>
-                <div>
-                    <div class="row mt-3">
-                        <div class="col-md-3">
-                            <p>Retrive</p>
-                        </div>
-                        <div class="col-md-3">
-                            <p>Sales Note</p>
-                        </div>
-                        <div class="col-md-6"></div>
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-3">
-                            <button class="btn btn-dark pl-4 pr-4 btn-lg">Hold</button>
-                        </div>
-
-                    </div>
-                    <div class="row mt-3">
-                        <div class="col-md-4">
-                            <button class="btn btn-dark pl-4 pr-4 btn-lg">Layway</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="row bg-info border rounded">
-                    <div class="col-md-12">
-                        <div style="height: 130px;" class=" d-flex justify-content-md-center align-items-center">
-                            <div class="ml-2 p-4">
-                                <h1 class="">$ 386</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-md-4 ">
-                        <p class="font-weight-bold">Payment Amount</p>
-                    </div>
-                    <div class="col-md-6"></div>
-                    <div class="col-md-2">
-                        <p>500</p>
-                    </div>
-
-                </div>
-                <hr class="hr">
-                <div class="row">
-                    <div class="col-md-4 ">
-                        <p>Customer</p>
-                    </div>
-                    <div class="col-md-6"></div>
-                    <div class="col-md-2">
-                        <button class="btn btn-warning">+</button>
-                    </div>
-                </div>
-                <div style="margin-top: 100px;"></div>
-
-                <div style="height: 10%;" class="row my-3 d-flex justify-content-between">
-                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-info">Cash</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center ">
-                        <button class="w-100 border rounded btn btn-info">Check</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-info">Credit Card</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-3 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-info">Gift Card</button>
-                    </div>
-                </div>
-                <div style="height: 10%;" class="row my-3">
-
-                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-secondary">Consigner Credit</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-secondary">Reward Credit</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-4 col-sm-12 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-secondary">Store Credit</button>
-                    </div>
-                </div>
-                <hr>
-                <div style="height: 10%;" class="row">
-
-                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center ">
-                        <button class="w-100 border rounded btn btn-dark">Clear</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-4 col-sm-6 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-dark">Suspend</button>
-                    </div>
-                    <div style="padding: 0;" class="col-md-4 col-sm-12 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-dark">Layaway</button>
-                    </div>
-
-
-
-
-                </div>
-                <div style="height: 10%;" class="row mt-5">
-                    <div style="padding:0;" class="col-md-12 d-flex justify-content-center">
-                        <button class="w-100 border rounded btn btn-success">Finish</button>
-                    </div>
-                </div>
+﻿<h4>Generate QR Codes</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="GenerateQRCode">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label class="control-label">Product</label>@*asp-for="BankName"*@
+                <select class="form-control" id="inv" asp-items="@ViewBag.pr" name="id">
+                    <option selected>Select One </option>
+                </select>
+                <span class="text-danger"></span>@*asp-validation-for="BankName"*@
             </div>
 
-        </div>
+        </form>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-8">
 
+        <table id="example1" class="table table-bordered table-striped">
+            <thead>
+                <tr>
+
+                    <th>Product Code</th>
+                    <th>Product Name</th>
+                    <th>Unit Price</th>
+                    <th>Remain Qty</th>
+
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td >
+                        <input type="text" id="product" readonly/>
+                    </td>
+                    <td >
+                        <input type="text" id="name" readonly />
+                    </td>
+                    <td >
+                        <input type="text" id="sellprice" readonly />
+                    </td>
+                    <td >
+                        <input type="text" id="rmn" readonly />
+                    </td>
+                </tr>
+
+            </tbody>
+        
+        </table>
 
     </div>
 
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <label>Order Qty :</label>
+        <input type="number" id="qty"/>
+    </div>
+
+    <div class="col-md-4">
+
+        <label>Amount :</label>
+        <input readonly type="text" id="amount" />
+
+    </div>
+</div>
 
 
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 
+@section Scripts {
+   
+       
+    <script>
+        $("#inv").change(function () {
+            var prname = $("#inv").val();
+            /*alert(prname);*/
+            if (prname != null && prname != '')
+            {
+                $.getJSON('@Url.Action("GetProductName")', { proname: prname }, function (mainhead) {
+                    console.log(mainhead);
+                    $('#product').val(mainhead.productCode);
+                    $('#name').val(mainhead.productTittle);
+                    $('#sellprice').val(mainhead.salesPrice);
+                    $('#rmn').val(mainhead.remainingQty);
 
+                });
+            }
+        });
+    </script>
 
-    <script src="script.js"></script>
+    <script>
+        $("#qty").change(function () {
+            var name = $("#inv").val();
+            var Quantity = $("#qty").val();
+            
+        /*    alert(Quantity);*/
+            if (Quantity != 0 && name != null && name != '')
+            {
+                $.getJSON('@Url.Action("GetAmount")', { name: name, Quantity: Quantity}, function (mainhead) {
+                    console.log(mainhead);
+                    $('#amount').val(mainhead);
+                    //$('#name').val(mainhead.productTittle);
+                    //$('#sellprice').val(mainhead.salesPrice);
+                    //$('#rmn').val(mainhead.remainingQty);
 
-</body>
+                });
 
-</html>
-
+            }
+        });
+    </script>
+}
