--- a/Areas/Management/Views/PreModule/PreSelect.cshtml
+++ b/Areas/Management/Views/PreModule/PreSelect.cshtml
@@ -49,7 +49,7 @@
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Customers</h5><br />
-                <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="WorkerIndex">Go</a>
+                <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="CustomerIndex">Go</a>
             </div>
         </div>
     </div>
