--- a/Areas/Management/Views/_ViewImports.cshtml
+++ b/Areas/Management/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using PurityERP
 @using PurityERP.Models
+@using PurityERP.Areas.Management.ViewModel
+@using PurityERP.Areas.Management.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
