--- a/Areas/Management/Views/PreModule/CustomerIndex.cshtml
+++ b/Areas/Management/Views/PreModule/CustomerIndex.cshtml
@@ -13,7 +13,7 @@
         <div class="card-header">
             <h3 class="card-title">Exitst Customer </h3>
         </div>
-        <a asp-action="CustomerIndex" class=" btn btn-primary float-right">Create New</a>
+        <a asp-action="CreateCustomer" class=" btn btn-primary float-right">Create New</a>
 
         <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
